@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app>
-</web-app>
+<filters>
+</filters>
